assets/style/main.scss
.app {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background-color: #fff;
}

.app-hero {
  min-height: 50vh;
  color: #fff;
  background: transparent no-repeat 50%;
  background-size: cover;
}

.app-hero-content {
  margin-left: 2em;
  margin-right: 2em;
}

.app-content {
  flex: 1
}

.app-footer,
.app-footer a {
  color: #fff;
  background-color: #333;
  padding: .5rem 1rem;
}

.header-video {
  position: relative;
  overflow: hidden;
}

.raster-overlay {
  height: 100%;
  width: 100%;
  background-image: url("/img/raster_dot.png");
  background-repeat: repeat;
}

.header-title {
  color: #fff;
  margin-left: 1rem;
  padding: 0 1.5rem;
  border-width: 0 0 0 8px;
  border-style: solid;
  border-color: #73a147;
  text-shadow: 0 0 8px #73a147;
}

.header-title h1 {
  line-height: 1;
}

.header-title p {
  margin-bottom: 0;
}

.header-caption {
  position: absolute;
  width: 100%;
  z-index: 40;
  top: 50%;
  transform: translateY(-50%);
}

.navbar-brand {
  width: 156px;
  position: relative;
}

.navbar-brand-image {
  height: 116px;
  position: absolute;
  top: -20px;
  z-index: 100;
}

.navbar .nav-item {
  font-size: 1.4rem;
}

.main-menu {
  position: relative;
  top: -25px;
  background: #fff;
}

.main-menu-brand a,
.main-menu-item a {
  line-height: 1.5rem;
  padding: 3rem 2rem;
  font-size: 1.6rem;
  font-weight: 700;
  text-transform: uppercase;
  white-space: nowrap;
  color: #222;
  border-width: 0.5rem 0 0 0;
  border-style: solid;
  border-color: #fff;
  transition: all 0.2s;
  -moz-transition: all 0.2s;
  -webkit-transition: all 0.2s;
  -o-transition: all 0.2s;
}

.main-menu-item a:hover {
  border-color: #73a147;
}

.main-menu-brand a {
  display: inline-block;
  width: 100px;
  height: 95px;
  line-height: 1.5rem;
}

.main-menu-brand img {
  position: absolute;
  /* modifying width also modifies separation to nav links */
  width: 128px;
  /* modify height to show more/less of logo */
  height: 97px;
  margin-top: -60px;
  margin-left: -50px;
}

.subnav {
}

.subnav-item {
}

.subnav-link {
  color: #fff;
}

.subnav-link.active {
  color: #042486;
}

.flex-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.video-viewport {
  position: relative;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.25);
  background: url('/img/header-background.jpg') center center;
  background-size: cover;
  width: 100%;
  height: 40vh;
}

.embed-responsive {
  position: relative;
  display: block;
  height: 0;
  padding: 0;
  overflow: hidden;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: url('/img/header-background.jpg') center center;
  background-size: cover;
  z-index: -10;
}

.embed-responsive-item,
.embed-responsive iframe,
.embed-responsive embed,
.embed-responsive object,
.embed-responsive video {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 0;
}

.embed-responsive-21by9 {
  padding-bottom: 42.857143%;
}

.embed-responsive-16by9 {
  padding-bottom: 56.25%;
}

.embed-responsive-4by3 {
  padding-bottom: 75%;
}

.embed-responsive-1by1 {
  padding-bottom: 100%;
}

.timeline {
  list-style-type: none;
}

.timeline-item {
  border-left: 1px solid #e5e5e5;
  position: relative;
  padding: 2rem 1.5rem .5rem 2.5rem;
  margin-left: 1rem;
  min-height: 5rem
}

.timeline-item:last-child {
  padding-bottom: 4rem
}

.timeline-date {
  margin-bottom: .5rem
}

.timeline-date span {
  color: #888;
  font-size: 85%;
  padding-left: .4rem
}

.timeline-content {
  padding: .5rem .8rem;
  background-color: #f4f4f4;
  border-radius: .5rem
}

.timeline-content span {
  display: block;
  color: #888;
  font-size: 85%
}

.timeline-title {
  font-size: 1.4rem;
}

.timeline-location {
  color: #888;
}

.timeline-icon {
  position: absolute;
  top: 2.2rem;
  width: 1rem;
  height: 1rem;
  margin-left: -3rem;
  border-radius: 50%;
  background: #042486;
  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, .08), 0 3px 0 4px rgba(0, 0, 0, .05);
}

.card-img-top {
  max-width: 100%;
  flex-shrink: 0;
}

.galery-card {
  min-width: 20%;
  max-width: 50%;
  margin-bottom: 1rem !important;
}

.galery-img {
    width: 100%;
    height: 20vh;
    object-fit: cover;
}

.img-responsive-16by9 {
  display: block;
  height: 0;
  padding-bottom: 56.25%;
  overflow: hidden;
}

@media (min-width: 576px) {
  .timeline-item {
    margin-left: 10rem
  }

  .timeline-date {
    position: absolute;
    left: -10rem;
    width: 7.5rem;
    text-align: right
  }

  .timeline-date span {
    display: block
  }

  .timeline-content {
    padding: 0;
    background-color: transparent
  }
}

.photocall {
  flex-flow: row wrap;
}

.photocall-logo {
  min-width: 148px;
  max-width: 164px;
}

.photocall-img {}

.photocall-footer {
  padding: .5rem;
  white-space: nowrap;
  overflow-x: hidden;
  font-size: .64rem;
  text-align: center;
}

